--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ branches:
     - release
     - validation
     - develop
+    - feature/travis-ci
 
 env:
 - URL=https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
@@ -29,5 +30,6 @@ before_install:
 - sfdx plugins --core
 - git clone https://github.com/vorno-crole/sf-packager.git sf-packager
 - npm link sf-packager
+- chmod +x ci/deploy.sh
 
 script: ci/deploy.sh
